# ur_tools

./: README.md
ur_bringup/: CMakeLists.txt  README.md  package.xml
ur_bringup/config/: bringup.rviz
ur_bringup/launch/: bringup.launch.py
ur_script_controller/: CMakeLists.txt  Cargo.toml  package.xml
ur_script_controller/src/: ur_script_controller.rs
ur_script_driver/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package.xml
ur_script_driver/src/: main.rs
ur_script_generator/: CMakeLists.txt  Cargo.toml  README.md  package.xml  setup.cfg  setup.py
ur_script_generator/src/: ur_script_generator.rs  ur_script_generator_test.rs
ur_script_generator/src/templates/: move_j.script
ur_script_generator/templates/: connect_robotiq_gripper.script  move_j.script  move_l.script  movel.script  pick.script  place.script  safe_move_j.script  start_vacuum.script  stop_vacuum.script
ur_script_generator/ur_script_generator/: ur_script_generator.py  ur_script_generator_test_client.py
ur_script_generator_msgs/: CMakeLists.txt  package.xml
ur_script_generator_msgs/msg/: Payload.msg
ur_script_generator_msgs/srv/: GenerateURScript.srv
ur_script_msgs/: CMakeLists.txt  package.xml
ur_script_msgs/action/: ExecuteScript.action
ur_script_msgs/msg/: Measured.msg
ur_script_msgs/srv/: DashboardCommand.srv
ur_scripts/: close_robotiq_gripper.script  open_robotiq_gripper.script
ur_setup/: README.md  package.xml  setup.cfg  setup.py
ur_setup/robots/case_r1/: general.json
ur_setup/robots/case_r2/: calibration.conf  general.json  robot_calibration_summary.txt
ur_setup/robots/case_r3/: general.json  physical_parameters.yaml  robot_calibration_summary.txt
ur_setup/robots/case_r4/: calibration.conf  general.json  physical_parameters.yaml
ur_setup/robots/lage/: calibration.conf  general.json  physical_parameters.yaml  robot_calibration_summary.txt  safety.conf
ur_setup/robots/per/: general.json  physical_parameters.yaml
ur_setup/robots/ursim/: general.json
ur_setup/robots/ursim10e/: general.json
ur_setup/robots/ursim3e/: general.json
ur_tools_msgs/: CMakeLists.txt  package.xml
ur_tools_msgs/action/: URScriptControl.action
ur_tools_msgs/msg/: JointPositions.msg
