[package]
name = "ur_script_generator"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.5.3" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
tera = "1.15.0"
lazy_static = "1.4.0"
serde = "1.0.130"
chrono = "0.4.19"

[[bin]]
name = "ur_script_generator"
path = "src/ur_script_generator.rs"

[[bin]]
name = "ur_script_generator_test"
path = "src/ur_script_generator_test.rs"